// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`packAnimal center option can be disabled 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 53.03030303030304%;
        height: 53.03030303030304%;
        transform: translateX(6.190476190476178%) translateY(-0.9523809523809524%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5.303030303030304,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5.303030303030304,
      \\"e\\":1.6414141414141383,
      \\"f\\":-0.2525252525252526
    }",
    "points": Array [
      Object {
        "x": 1.6414141414141383,
        "y": -0.2525252525252526,
      },
      Object {
        "x": 28.156565656565657,
        "y": -0.2525252525252526,
      },
      Object {
        "x": 14.898989898989887,
        "y": 26.262626262626267,
      },
    ],
    "rotate": -0,
    "scale": 5.303030303030304,
    "svgTransform": "matrix(5.303030303030304,0,0,5.303030303030304,1.6414141414141383,-0.2525252525252526)",
    "translateX": 1.6414141414141383,
    "translateY": -0.2525252525252526,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 37.87878787878788%;
        height: 30.303030303030308%;
        transform: translateX(155.33333333333334%) translateY(23.33333333333329%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.7878787878787885,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.7878787878787885,
      \\"e\\":29.419191919191924,
      \\"f\\":3.5353535353535293
    }",
    "points": Array [
      Object {
        "x": 29.419191919191924,
        "y": 3.5353535353535293,
      },
      Object {
        "x": 48.35858585858587,
        "y": 3.5353535353535293,
      },
      Object {
        "x": 48.35858585858587,
        "y": 22.47474747474746,
      },
      Object {
        "x": 29.419191919191924,
        "y": 22.47474747474746,
      },
    ],
    "rotate": -0,
    "scale": 3.7878787878787885,
    "svgTransform": "matrix(3.7878787878787885,0,0,3.7878787878787885,29.419191919191924,3.5353535353535293)",
    "translateX": 29.419191919191924,
    "translateY": 3.5353535353535293,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 53.03030303030304%;
        height: 53.03030303030304%;
        transform: translateX(51.42857142857146%) translateY(89.5238095238095%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5.303030303030304,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5.303030303030304,
      \\"e\\":13.636363636363647,
      \\"f\\":23.737373737373737
    }",
    "points": Array [
      Object {
        "x": 13.636363636363647,
        "y": 23.737373737373737,
      },
      Object {
        "x": 40.15151515151517,
        "y": 23.737373737373737,
      },
      Object {
        "x": 26.893939393939398,
        "y": 50.25252525252526,
      },
    ],
    "rotate": -0,
    "scale": 5.303030303030304,
    "svgTransform": "matrix(5.303030303030304,0,0,5.303030303030304,13.636363636363647,23.737373737373737)",
    "translateX": 13.636363636363647,
    "translateY": 23.737373737373737,
  },
]
`;

exports[`packAnimal it works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 53.03030303030304%;
        height: 42.42424242424243%;
        transform: translateX(6.190476190476178%) translateY(-1.1904761904761907%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5.303030303030304,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5.303030303030304,
      \\"e\\":1.6414141414141383,
      \\"f\\":-0.2525252525252526
    }",
    "points": Array [
      Object {
        "x": 1.6414141414141383,
        "y": -0.25252525252525143,
      },
      Object {
        "x": 28.156565656565665,
        "y": -0.25252525252525143,
      },
      Object {
        "x": 14.8989898989899,
        "y": 26.262626262626245,
      },
    ],
    "rotate": -0,
    "scale": 5.303030303030304,
    "svgTransform": "matrix(5.303030303030304,0,0,5.303030303030304,1.6414141414141383,-0.2525252525252526)",
    "translateX": 1.6414141414141383,
    "translateY": -0.2525252525252526,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 30.303030303030308%;
        height: 37.87878787878788%;
        transform: translateX(194.1666666666665%) translateY(18.666666666666632%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.7878787878787885,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.7878787878787885,
      \\"e\\":29.419191919191896,
      \\"f\\":3.5353535353535293
    }",
    "points": Array [
      Object {
        "x": 29.419191919191924,
        "y": 3.535353535353514,
      },
      Object {
        "x": 48.358585858585855,
        "y": 3.535353535353514,
      },
      Object {
        "x": 48.358585858585855,
        "y": 22.47474747474747,
      },
      Object {
        "x": 29.419191919191924,
        "y": 22.47474747474747,
      },
    ],
    "rotate": -0,
    "scale": 3.7878787878787885,
    "svgTransform": "matrix(3.7878787878787885,0,0,3.7878787878787885,29.419191919191896,3.5353535353535293)",
    "translateX": 29.419191919191896,
    "translateY": 3.5353535353535293,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 42.42424242424243%;
        height: 42.42424242424243%;
        transform: translateX(64.28571428571433%) translateY(111.90476190476188%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5.303030303030304,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5.303030303030304,
      \\"e\\":13.636363636363647,
      \\"f\\":23.737373737373737
    }",
    "points": Array [
      Object {
        "x": 13.636363636363647,
        "y": 23.737373737373733,
      },
      Object {
        "x": 40.15151515151514,
        "y": 23.737373737373733,
      },
      Object {
        "x": 26.893939393939384,
        "y": 50.252525252525245,
      },
    ],
    "rotate": -0,
    "scale": 5.303030303030304,
    "svgTransform": "matrix(5.303030303030304,0,0,5.303030303030304,13.636363636363647,23.737373737373737)",
    "translateX": 13.636363636363647,
    "translateY": 23.737373737373737,
  },
]
`;

exports[`packAnimal it works 2`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 100%;
        height: 100%;
        transform: translateX(0%) translateY(0%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":10,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":10,
      \\"e\\":0,
      \\"f\\":0
    }",
    "points": Array [
      Object {
        "x": 0,
        "y": 0,
      },
      Object {
        "x": 50,
        "y": 0,
      },
      Object {
        "x": 25,
        "y": 50,
      },
    ],
    "rotate": -0,
    "scale": 10,
    "svgTransform": "matrix(10,0,0,10,0,0)",
    "translateX": 0,
    "translateY": 0,
  },
]
`;

exports[`packAnimal jitter option works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 11.996680075147504%;
        height: 9.597344060118003%;
        transform: translateX(100.73062234036736%) translateY(-9.207390444270969%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1.1996680075147503,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1.1996680075147503,
      \\"e\\":6.042165249939465,
      \\"f\\":-0.4418324699475562
    }",
    "points": Array [
      Object {
        "x": 6.042165249939465,
        "y": -0.4418324699475541,
      },
      Object {
        "x": 12.040505287513216,
        "y": -0.4418324699475541,
      },
      Object {
        "x": 9.041335268726343,
        "y": 5.556507567626193,
      },
    ],
    "rotate": -0,
    "scale": 1.1996680075147503,
    "svgTransform": "matrix(1.1996680075147503,0,0,1.1996680075147503,6.042165249939465,-0.4418324699475562)",
    "translateX": 6.042165249939465,
    "translateY": -0.4418324699475562,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 9.390918444489328%;
        height: 9.390918444489328%;
        transform: translateX(836.177542375642%) translateY(974.2683533695736%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.9390918444489328,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.9390918444489328,
      \\"e\\":39.26237552781586,
      \\"f\\":45.74637324770288
    }",
    "points": Array [
      Object {
        "x": 39.26237552781587,
        "y": 45.74637324770288,
      },
      Object {
        "x": 43.957834750060535,
        "y": 45.74637324770288,
      },
      Object {
        "x": 43.957834750060535,
        "y": 50.441832469947556,
      },
      Object {
        "x": 39.26237552781587,
        "y": 50.441832469947556,
      },
    ],
    "rotate": -0,
    "scale": 0.9390918444489328,
    "svgTransform": "matrix(0.9390918444489328,0,0,0.9390918444489328,39.26237552781586,45.74637324770288)",
    "translateX": 39.26237552781586,
    "translateY": 45.74637324770288,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 10.122093688132187%;
        height: 12.652617110165234%;
        transform: translateX(453.80830038049504%) translateY(601.0941972729294%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1.2652617110165234,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1.2652617110165234,
      \\"e\\":22.967450664517024,
      \\"f\\":38.02707362618251
    }",
    "points": Array [
      Object {
        "x": 22.967450664517024,
        "y": 38.02707362618251,
      },
      Object {
        "x": 29.29375921959964,
        "y": 38.02707362618251,
      },
      Object {
        "x": 26.130604942058326,
        "y": 44.35338218126513,
      },
    ],
    "rotate": -0,
    "scale": 1.2652617110165234,
    "svgTransform": "matrix(1.2652617110165234,0,0,1.2652617110165234,22.967450664517024,38.02707362618251)",
    "translateX": 22.967450664517024,
    "translateY": 38.02707362618251,
  },
]
`;

exports[`packAnimal jitter option works 2`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 42.42424242424243%;
        height: 42.42424242424243%;
        transform: translateX(-1.3499403990042658%) translateY(13.790214571378534%) rotate(-9.514108924195147deg)
      ",
    "matrix": "{
      \\"a\\":5.23008674537001,
      \\"b\\":-0.8765403760025049,
      \\"c\\":0.8765403760025049,
      \\"d\\":5.23008674537001,
      \\"e\\":-0.2863509937281776,
      \\"f\\":2.9251970302924164
    }",
    "points": Array [
      Object {
        "x": -0.2863509937281819,
        "y": 2.925197030292398,
      },
      Object {
        "x": 25.86408273312187,
        "y": -1.4575048497201069,
      },
      Object {
        "x": 17.171567749709357,
        "y": 26.88427981713618,
      },
    ],
    "rotate": -9.514108924195147,
    "scale": 5.303030303030304,
    "svgTransform": "matrix(5.23008674537001,-0.8765403760025049,0.8765403760025049,5.23008674537001,-0.2863509937281776,2.9251970302924164)",
    "translateX": -0.2863509937281776,
    "translateY": 2.9251970302924164,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 37.87878787878788%;
        height: 37.87878787878788%;
        transform: translateX(164.062209019557%) translateY(28.159808605942306%) rotate(-0.8367707021531711deg)
      ",
    "matrix": "{
      \\"a\\":3.7874748393552036,
      \\"b\\":-0.05531774501326919,
      \\"c\\":0.05531774501326919,
      \\"d\\":3.7874748393552036,
      \\"e\\":31.072388071885797,
      \\"f\\":5.333297084458771
    }",
    "points": Array [
      Object {
        "x": 31.072388071885825,
        "y": 5.3332970844587555,
      },
      Object {
        "x": 50.009762268661845,
        "y": 5.056708359392422,
      },
      Object {
        "x": 50.28635099372819,
        "y": 23.994082556168436,
      },
      Object {
        "x": 31.348976796952176,
        "y": 24.270671281234783,
      },
    ],
    "rotate": -0.8367707021531711,
    "scale": 3.787878787878788,
    "svgTransform": "matrix(3.7874748393552036,-0.05531774501326919,0.05531774501326919,3.7874748393552036,31.072388071885797,5.333297084458771)",
    "translateX": 31.072388071885797,
    "translateY": 5.333297084458771,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 42.42424242424243%;
        height: 42.42424242424243%;
        transform: translateX(64.06896641174015%) translateY(122.95729544859351%) rotate(-4.565793089568681deg)
      ",
    "matrix": "{
      \\"a\\":5.2862015681823475,
      \\"b\\":-0.42214141635731656,
      \\"c\\":0.42214141635731656,
      \\"d\\":5.2862015681823475,
      \\"e\\":13.590386814611549,
      \\"f\\":26.081850549701656
    }",
    "points": Array [
      Object {
        "x": 13.590386814611545,
        "y": 26.081850549701652,
      },
      Object {
        "x": 40.02139465552326,
        "y": 23.971143467915077,
      },
      Object {
        "x": 28.916597816853972,
        "y": 51.457504849720095,
      },
    ],
    "rotate": -4.565793089568681,
    "scale": 5.303030303030304,
    "svgTransform": "matrix(5.2862015681823475,-0.42214141635731656,0.42214141635731656,5.2862015681823475,13.590386814611549,26.081850549701656)",
    "translateX": 13.590386814611549,
    "translateY": 26.081850549701656,
  },
]
`;

exports[`packAnimal margin option works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 43.75%;
        height: 35%;
        transform: translateX(-0.9920634920635751%) translateY(-13.888888888888978%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":4.375,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":4.375,
      \\"e\\":-0.21701388888890705,
      \\"f\\":-2.4305555555555713
    }",
    "points": Array [
      Object {
        "x": -0.2170138888889051,
        "y": -2.4305555555555713,
      },
      Object {
        "x": 21.657986111111093,
        "y": -2.4305555555555713,
      },
      Object {
        "x": 10.720486111111095,
        "y": 19.444444444444397,
      },
    ],
    "rotate": -0,
    "scale": 4.375,
    "svgTransform": "matrix(4.375,0,0,4.375,-0.21701388888890705,-2.4305555555555713)",
    "translateX": -0.21701388888890705,
    "translateY": -2.4305555555555713,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 26.041666666666675%;
        height: 20.833333333333336%;
        transform: translateX(285.6666666666667%) translateY(19.16666666666647%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.604166666666667,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.604166666666667,
      \\"e\\":37.196180555555564,
      \\"f\\":1.9965277777777573
    }",
    "points": Array [
      Object {
        "x": 37.196180555555564,
        "y": 1.9965277777777573,
      },
      Object {
        "x": 50.21701388888891,
        "y": 1.9965277777777573,
      },
      Object {
        "x": 50.21701388888891,
        "y": 15.017361111111073,
      },
      Object {
        "x": 37.196180555555564,
        "y": 15.017361111111073,
      },
    ],
    "rotate": -0,
    "scale": 2.604166666666667,
    "svgTransform": "matrix(2.604166666666667,0,0,2.604166666666667,37.196180555555564,1.9965277777777573)",
    "translateX": 37.196180555555564,
    "translateY": 1.9965277777777573,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 35%;
        height: 35%;
        transform: translateX(93.00595238095212%) translateY(174.6031746031747%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":4.375,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":4.375,
      \\"e\\":16.27604166666662,
      \\"f\\":30.55555555555557
    }",
    "points": Array [
      Object {
        "x": 16.27604166666662,
        "y": 30.55555555555557,
      },
      Object {
        "x": 38.151041666666586,
        "y": 30.55555555555557,
      },
      Object {
        "x": 27.21354166666659,
        "y": 52.430555555555564,
      },
    ],
    "rotate": -0,
    "scale": 4.375,
    "svgTransform": "matrix(4.375,0,0,4.375,16.27604166666662,30.55555555555557)",
    "translateX": 16.27604166666662,
    "translateY": 30.55555555555557,
  },
]
`;

exports[`packAnimal maximizing can be disabled 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 11.666666666666668%;
        height: 11.666666666666668%;
        transform: translateX(380.9523809523809%) translateY(373.80952380952374%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1.1666666666666667,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1.1666666666666667,
      \\"e\\":22.22222222222222,
      \\"f\\":21.805555555555554
    }",
    "points": Array [
      Object {
        "x": 22.22222222222222,
        "y": 21.805555555555554,
      },
      Object {
        "x": 28.055555555555557,
        "y": 21.805555555555554,
      },
      Object {
        "x": 25.13888888888889,
        "y": 27.638888888888886,
      },
    ],
    "rotate": -0,
    "scale": 1.1666666666666667,
    "svgTransform": "matrix(1.1666666666666667,0,0,1.1666666666666667,22.22222222222222,21.805555555555554)",
    "translateX": 22.22222222222222,
    "translateY": 21.805555555555554,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 8.333333333333334%;
        height: 8.333333333333334%;
        transform: translateX(679.9999999999999%) translateY(543.3333333333331%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.8333333333333334,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.8333333333333334,
      \\"e\\":28.333333333333332,
      \\"f\\":22.638888888888886
    }",
    "points": Array [
      Object {
        "x": 28.333333333333332,
        "y": 22.638888888888886,
      },
      Object {
        "x": 32.5,
        "y": 22.638888888888886,
      },
      Object {
        "x": 32.5,
        "y": 26.805555555555554,
      },
      Object {
        "x": 28.333333333333332,
        "y": 26.805555555555554,
      },
    ],
    "rotate": -0,
    "scale": 0.8333333333333334,
    "svgTransform": "matrix(0.8333333333333334,0,0,0.8333333333333334,28.333333333333332,22.638888888888886)",
    "translateX": 28.333333333333332,
    "translateY": 22.638888888888886,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 11.666666666666668%;
        height: 11.666666666666668%;
        transform: translateX(426.1904761904761%) translateY(464.2857142857142%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1.1666666666666667,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1.1666666666666667,
      \\"e\\":24.86111111111111,
      \\"f\\":27.083333333333332
    }",
    "points": Array [
      Object {
        "x": 24.86111111111111,
        "y": 27.083333333333332,
      },
      Object {
        "x": 30.694444444444443,
        "y": 27.083333333333332,
      },
      Object {
        "x": 27.777777777777775,
        "y": 32.916666666666664,
      },
    ],
    "rotate": -0,
    "scale": 1.1666666666666667,
    "svgTransform": "matrix(1.1666666666666667,0,0,1.1666666666666667,24.86111111111111,27.083333333333332)",
    "translateX": 24.86111111111111,
    "translateY": 27.083333333333332,
  },
]
`;

exports[`packAnimal postPackPolygonScale option works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 42%;
        height: 42%;
        transform: translateX(2.645502645502585%) translateY(-6.283068783068775%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5.25,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5.25,
      \\"e\\":0.5555555555555429,
      \\"f\\":-1.3194444444444429
    }",
    "points": Array [
      Object {
        "x": 0.5555555555555429,
        "y": -1.3194444444444429,
      },
      Object {
        "x": 26.805555555555532,
        "y": -1.3194444444444429,
      },
      Object {
        "x": 13.680555555555541,
        "y": 24.93055555555554,
      },
    ],
    "rotate": -0,
    "scale": 5.25,
    "svgTransform": "matrix(5.25,0,0,5.25,0.5555555555555429,-1.3194444444444429)",
    "translateX": 0.5555555555555429,
    "translateY": -1.3194444444444429,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 37.5%;
        height: 37.5%;
        transform: translateX(163.7037037037037%) translateY(12.962962962962857%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.75,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.75,
      \\"e\\":30.694444444444443,
      \\"f\\":2.430555555555536
    }",
    "points": Array [
      Object {
        "x": 30.694444444444443,
        "y": 2.430555555555509,
      },
      Object {
        "x": 49.44444444444444,
        "y": 2.430555555555509,
      },
      Object {
        "x": 49.44444444444444,
        "y": 21.18055555555552,
      },
      Object {
        "x": 30.694444444444443,
        "y": 21.18055555555552,
      },
    ],
    "rotate": -0,
    "scale": 3.75,
    "svgTransform": "matrix(3.75,0,0,3.75,30.694444444444443,2.430555555555536)",
    "translateX": 30.694444444444443,
    "translateY": 2.430555555555536,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 52.5%;
        height: 52.5%;
        transform: translateX(52.38095238095235%) translateY(95.5026455026455%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5.25,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5.25,
      \\"e\\":13.749999999999993,
      \\"f\\":25.069444444444443
    }",
    "points": Array [
      Object {
        "x": 13.749999999999993,
        "y": 25.069444444444443,
      },
      Object {
        "x": 39.99999999999999,
        "y": 25.069444444444443,
      },
      Object {
        "x": 26.874999999999986,
        "y": 51.31944444444444,
      },
    ],
    "rotate": -0,
    "scale": 5.25,
    "svgTransform": "matrix(5.25,0,0,5.25,13.749999999999993,25.069444444444443)",
    "translateX": 13.749999999999993,
    "translateY": 25.069444444444443,
  },
]
`;

exports[`packAnimal rotation can be disabled 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 53.03030303030304%;
        height: 42.42424242424243%;
        transform: translateX(6.190476190476178%) translateY(-1.1904761904761907%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5.303030303030304,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5.303030303030304,
      \\"e\\":1.6414141414141383,
      \\"f\\":-0.2525252525252526
    }",
    "points": Array [
      Object {
        "x": 1.6414141414141383,
        "y": -0.25252525252525143,
      },
      Object {
        "x": 28.156565656565665,
        "y": -0.25252525252525143,
      },
      Object {
        "x": 14.8989898989899,
        "y": 26.262626262626245,
      },
    ],
    "rotate": -0,
    "scale": 5.303030303030304,
    "svgTransform": "matrix(5.303030303030304,0,0,5.303030303030304,1.6414141414141383,-0.2525252525252526)",
    "translateX": 1.6414141414141383,
    "translateY": -0.2525252525252526,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 30.303030303030308%;
        height: 37.87878787878788%;
        transform: translateX(194.1666666666665%) translateY(18.666666666666632%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.7878787878787885,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.7878787878787885,
      \\"e\\":29.419191919191896,
      \\"f\\":3.5353535353535293
    }",
    "points": Array [
      Object {
        "x": 29.419191919191924,
        "y": 3.535353535353514,
      },
      Object {
        "x": 48.358585858585855,
        "y": 3.535353535353514,
      },
      Object {
        "x": 48.358585858585855,
        "y": 22.47474747474747,
      },
      Object {
        "x": 29.419191919191924,
        "y": 22.47474747474747,
      },
    ],
    "rotate": -0,
    "scale": 3.7878787878787885,
    "svgTransform": "matrix(3.7878787878787885,0,0,3.7878787878787885,29.419191919191896,3.5353535353535293)",
    "translateX": 29.419191919191896,
    "translateY": 3.5353535353535293,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 42.42424242424243%;
        height: 42.42424242424243%;
        transform: translateX(64.28571428571433%) translateY(111.90476190476188%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5.303030303030304,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5.303030303030304,
      \\"e\\":13.636363636363647,
      \\"f\\":23.737373737373737
    }",
    "points": Array [
      Object {
        "x": 13.636363636363647,
        "y": 23.737373737373733,
      },
      Object {
        "x": 40.15151515151514,
        "y": 23.737373737373733,
      },
      Object {
        "x": 26.893939393939384,
        "y": 50.252525252525245,
      },
    ],
    "rotate": -0,
    "scale": 5.303030303030304,
    "svgTransform": "matrix(5.303030303030304,0,0,5.303030303030304,13.636363636363647,23.737373737373737)",
    "translateX": 13.636363636363647,
    "translateY": 23.737373737373737,
  },
]
`;
